src/__tests__/require_chevereto/kube/ing/http-chevereto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chevereto-free-http
  namespace: chevereto-free
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: chevereto.cardnag.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chevereto-free-http
                port:
                  number: 80
